--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,10 @@
 	"description": "글 쓸때 검열로 인한 글 초기화 방지",
 	"version": "1.1",
 	"manifest_version": 3,
+	"permissions": [
+		"activeTab",
+		"tabs"
+	]
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
